Beckerman_Leandro_Martin/y.output
Gramática

    0 $accept: programa $end

    1 programa: programa sentencia
    2         | sentencia

    3 sentencia: asignacion
    4          | salida
    5          | entrada
    6          | iteracion
    7          | seleccion
    8          | declaracion
    9          | COMEN
   10          | LONG PARA lista PARC
   11          | ciclo_especial
   12          | ENTER

   13 asignacion: ID OP_ASIG expresion

   14 salida: DISPLAY factor

   15 entrada: GET ID

   16 expresion: expresion OP_SUM termino
   17          | expresion OP_RES termino
   18          | termino

   19 iteracion: WHILE condicion START programa END

   20 seleccion: IF condicion THEN programa ELSE programa ENDIF
   21          | IF condicion THEN programa ENDIF

   22 condicion: PARA condicion AND comparacion PARC
   23          | PARA condicion OR comparacion PARC
   24          | PARA NOT condicion PARC
   25          | comparacion

   26 comparacion: expresion COMPARADOR expresion
   27            | PARA expresion COMPARADOR expresion PARC

   28 termino: termino OP_MUL factor
   29        | termino OP_DIV factor
   30        | factor

   31 factor: ID
   32       | CTE
   33       | CTE_R
   34       | CTE_S
   35       | PARA expresion PARC

   36 declaracion: DIM CORA listav CORC AS CORA listat CORC

   37 listav: listav COMA ID
   38       | ID

   39 listat: listat COMA TIPO
   40       | TIPO

   41 lista: lista COMA factor
   42      | factor

   43 ciclo_especial: WHILE ID IN CORA lista_expre CORC DO programa ENDWHILE

   44 lista_expre: lista_expre COMA expresion
   45            | expresion


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
ID (258) 13 15 31 37 38 43
OP_ASIG (259) 13
CTE (260) 32
COMEN (261) 9
DISPLAY (262) 14
CTE_S (263) 34
ENTER (264) 12
OP_SUM (265) 16
OP_RES (266) 17
OP_MUL (267) 28
OP_DIV (268) 29
PARA (269) 10 22 23 24 27 35
PARC (270) 10 22 23 24 27 35
GET (271) 15
WHILE (272) 19 43
START (273) 19
END (274) 19
OR (275) 23
AND (276) 22
COMPARADOR (277) 26 27
IF (278) 20 21
THEN (279) 20 21
ELSE (280) 20
ENDIF (281) 20 21
DIM (282) 36
CORA (283) 36 43
CORC (284) 36 43
AS (285) 36
TIPO (286) 39 40
COMA (287) 37 39 41 44
LONG (288) 10
IN (289) 43
DO (290) 43
ENDWHILE (291) 43
CTE_R (292) 33
NOT (293) 24


No terminales con las reglas donde aparecen

$accept (39)
    en la izquierda: 0
programa (40)
    en la izquierda: 1 2, en la derecha: 0 1 19 20 21 43
sentencia (41)
    en la izquierda: 3 4 5 6 7 8 9 10 11 12, en la derecha: 1 2
asignacion (42)
    en la izquierda: 13, en la derecha: 3
salida (43)
    en la izquierda: 14, en la derecha: 4
entrada (44)
    en la izquierda: 15, en la derecha: 5
expresion (45)
    en la izquierda: 16 17 18, en la derecha: 13 16 17 26 27 35 44
    45
iteracion (46)
    en la izquierda: 19, en la derecha: 6
seleccion (47)
    en la izquierda: 20 21, en la derecha: 7
condicion (48)
    en la izquierda: 22 23 24 25, en la derecha: 19 20 21 22 23 24
comparacion (49)
    en la izquierda: 26 27, en la derecha: 22 23 25
termino (50)
    en la izquierda: 28 29 30, en la derecha: 16 17 18 28 29
factor (51)
    en la izquierda: 31 32 33 34 35, en la derecha: 14 28 29 30 41
    42
declaracion (52)
    en la izquierda: 36, en la derecha: 8
listav (53)
    en la izquierda: 37 38, en la derecha: 36 37
listat (54)
    en la izquierda: 39 40, en la derecha: 36 39
lista (55)
    en la izquierda: 41 42, en la derecha: 10 41
ciclo_especial (56)
    en la izquierda: 43, en la derecha: 11
lista_expre (57)
    en la izquierda: 44 45, en la derecha: 43 44


estado 0

    0 $accept: . programa $end

    ID       desplazar e ir al estado 1
    COMEN    desplazar e ir al estado 2
    DISPLAY  desplazar e ir al estado 3
    ENTER    desplazar e ir al estado 4
    GET      desplazar e ir al estado 5
    WHILE    desplazar e ir al estado 6
    IF       desplazar e ir al estado 7
    DIM      desplazar e ir al estado 8
    LONG     desplazar e ir al estado 9

    programa        ir al estado 10
    sentencia       ir al estado 11
    asignacion      ir al estado 12
    salida          ir al estado 13
    entrada         ir al estado 14
    iteracion       ir al estado 15
    seleccion       ir al estado 16
    declaracion     ir al estado 17
    ciclo_especial  ir al estado 18


estado 1

   13 asignacion: ID . OP_ASIG expresion

    OP_ASIG  desplazar e ir al estado 19


estado 2

    9 sentencia: COMEN .

    $default  reduce usando la regla 9 (sentencia)


estado 3

   14 salida: DISPLAY . factor

    ID     desplazar e ir al estado 20
    CTE    desplazar e ir al estado 21
    CTE_S  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23
    CTE_R  desplazar e ir al estado 24

    factor  ir al estado 25


estado 4

   12 sentencia: ENTER .

    $default  reduce usando la regla 12 (sentencia)


estado 5

   15 entrada: GET . ID

    ID  desplazar e ir al estado 26


estado 6

   19 iteracion: WHILE . condicion START programa END
   43 ciclo_especial: WHILE . ID IN CORA lista_expre CORC DO programa ENDWHILE

    ID     desplazar e ir al estado 27
    CTE    desplazar e ir al estado 21
    CTE_S  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 28
    CTE_R  desplazar e ir al estado 24

    expresion    ir al estado 29
    condicion    ir al estado 30
    comparacion  ir al estado 31
    termino      ir al estado 32
    factor       ir al estado 33


estado 7

   20 seleccion: IF . condicion THEN programa ELSE programa ENDIF
   21          | IF . condicion THEN programa ENDIF

    ID     desplazar e ir al estado 20
    CTE    desplazar e ir al estado 21
    CTE_S  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 28
    CTE_R  desplazar e ir al estado 24

    expresion    ir al estado 29
    condicion    ir al estado 34
    comparacion  ir al estado 31
    termino      ir al estado 32
    factor       ir al estado 33


estado 8

   36 declaracion: DIM . CORA listav CORC AS CORA listat CORC

    CORA  desplazar e ir al estado 35


estado 9

   10 sentencia: LONG . PARA lista PARC

    PARA  desplazar e ir al estado 36


estado 10

    0 $accept: programa . $end
    1 programa: programa . sentencia

    $end     desplazar e ir al estado 37
    ID       desplazar e ir al estado 1
    COMEN    desplazar e ir al estado 2
    DISPLAY  desplazar e ir al estado 3
    ENTER    desplazar e ir al estado 4
    GET      desplazar e ir al estado 5
    WHILE    desplazar e ir al estado 6
    IF       desplazar e ir al estado 7
    DIM      desplazar e ir al estado 8
    LONG     desplazar e ir al estado 9

    sentencia       ir al estado 38
    asignacion      ir al estado 12
    salida          ir al estado 13
    entrada         ir al estado 14
    iteracion       ir al estado 15
    seleccion       ir al estado 16
    declaracion     ir al estado 17
    ciclo_especial  ir al estado 18


estado 11

    2 programa: sentencia .

    $default  reduce usando la regla 2 (programa)


estado 12

    3 sentencia: asignacion .

    $default  reduce usando la regla 3 (sentencia)


estado 13

    4 sentencia: salida .

    $default  reduce usando la regla 4 (sentencia)


estado 14

    5 sentencia: entrada .

    $default  reduce usando la regla 5 (sentencia)


estado 15

    6 sentencia: iteracion .

    $default  reduce usando la regla 6 (sentencia)


estado 16

    7 sentencia: seleccion .

    $default  reduce usando la regla 7 (sentencia)


estado 17

    8 sentencia: declaracion .

    $default  reduce usando la regla 8 (sentencia)


estado 18

   11 sentencia: ciclo_especial .

    $default  reduce usando la regla 11 (sentencia)


estado 19

   13 asignacion: ID OP_ASIG . expresion

    ID     desplazar e ir al estado 20
    CTE    desplazar e ir al estado 21
    CTE_S  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23
    CTE_R  desplazar e ir al estado 24

    expresion  ir al estado 39
    termino    ir al estado 32
    factor     ir al estado 33


estado 20

   31 factor: ID .

    $default  reduce usando la regla 31 (factor)


estado 21

   32 factor: CTE .

    $default  reduce usando la regla 32 (factor)


estado 22

   34 factor: CTE_S .

    $default  reduce usando la regla 34 (factor)


estado 23

   35 factor: PARA . expresion PARC

    ID     desplazar e ir al estado 20
    CTE    desplazar e ir al estado 21
    CTE_S  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23
    CTE_R  desplazar e ir al estado 24

    expresion  ir al estado 40
    termino    ir al estado 32
    factor     ir al estado 33


estado 24

   33 factor: CTE_R .

    $default  reduce usando la regla 33 (factor)


estado 25

   14 salida: DISPLAY factor .

    $default  reduce usando la regla 14 (salida)


estado 26

   15 entrada: GET ID .

    $default  reduce usando la regla 15 (entrada)


estado 27

   31 factor: ID .
   43 ciclo_especial: WHILE ID . IN CORA lista_expre CORC DO programa ENDWHILE

    IN  desplazar e ir al estado 41

    $default  reduce usando la regla 31 (factor)


estado 28

   22 condicion: PARA . condicion AND comparacion PARC
   23          | PARA . condicion OR comparacion PARC
   24          | PARA . NOT condicion PARC
   27 comparacion: PARA . expresion COMPARADOR expresion PARC
   35 factor: PARA . expresion PARC

    ID     desplazar e ir al estado 20
    CTE    desplazar e ir al estado 21
    CTE_S  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 28
    CTE_R  desplazar e ir al estado 24
    NOT    desplazar e ir al estado 42

    expresion    ir al estado 43
    condicion    ir al estado 44
    comparacion  ir al estado 31
    termino      ir al estado 32
    factor       ir al estado 33


estado 29

   16 expresion: expresion . OP_SUM termino
   17          | expresion . OP_RES termino
   26 comparacion: expresion . COMPARADOR expresion

    OP_SUM      desplazar e ir al estado 45
    OP_RES      desplazar e ir al estado 46
    COMPARADOR  desplazar e ir al estado 47


estado 30

   19 iteracion: WHILE condicion . START programa END

    START  desplazar e ir al estado 48


estado 31

   25 condicion: comparacion .

    $default  reduce usando la regla 25 (condicion)


estado 32

   18 expresion: termino .
   28 termino: termino . OP_MUL factor
   29        | termino . OP_DIV factor

    OP_MUL  desplazar e ir al estado 49
    OP_DIV  desplazar e ir al estado 50

    $default  reduce usando la regla 18 (expresion)


estado 33

   30 termino: factor .

    $default  reduce usando la regla 30 (termino)


estado 34

   20 seleccion: IF condicion . THEN programa ELSE programa ENDIF
   21          | IF condicion . THEN programa ENDIF

    THEN  desplazar e ir al estado 51


estado 35

   36 declaracion: DIM CORA . listav CORC AS CORA listat CORC

    ID  desplazar e ir al estado 52

    listav  ir al estado 53


estado 36

   10 sentencia: LONG PARA . lista PARC

    ID     desplazar e ir al estado 20
    CTE    desplazar e ir al estado 21
    CTE_S  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23
    CTE_R  desplazar e ir al estado 24

    factor  ir al estado 54
    lista   ir al estado 55


estado 37

    0 $accept: programa $end .

    $default  aceptar


estado 38

    1 programa: programa sentencia .

    $default  reduce usando la regla 1 (programa)


estado 39

   13 asignacion: ID OP_ASIG expresion .
   16 expresion: expresion . OP_SUM termino
   17          | expresion . OP_RES termino

    OP_SUM  desplazar e ir al estado 45
    OP_RES  desplazar e ir al estado 46

    $default  reduce usando la regla 13 (asignacion)


estado 40

   16 expresion: expresion . OP_SUM termino
   17          | expresion . OP_RES termino
   35 factor: PARA expresion . PARC

    OP_SUM  desplazar e ir al estado 45
    OP_RES  desplazar e ir al estado 46
    PARC    desplazar e ir al estado 56


estado 41

   43 ciclo_especial: WHILE ID IN . CORA lista_expre CORC DO programa ENDWHILE

    CORA  desplazar e ir al estado 57


estado 42

   24 condicion: PARA NOT . condicion PARC

    ID     desplazar e ir al estado 20
    CTE    desplazar e ir al estado 21
    CTE_S  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 28
    CTE_R  desplazar e ir al estado 24

    expresion    ir al estado 29
    condicion    ir al estado 58
    comparacion  ir al estado 31
    termino      ir al estado 32
    factor       ir al estado 33


estado 43

   16 expresion: expresion . OP_SUM termino
   17          | expresion . OP_RES termino
   26 comparacion: expresion . COMPARADOR expresion
   27            | PARA expresion . COMPARADOR expresion PARC
   35 factor: PARA expresion . PARC

    OP_SUM      desplazar e ir al estado 45
    OP_RES      desplazar e ir al estado 46
    PARC        desplazar e ir al estado 56
    COMPARADOR  desplazar e ir al estado 59


estado 44

   22 condicion: PARA condicion . AND comparacion PARC
   23          | PARA condicion . OR comparacion PARC

    OR   desplazar e ir al estado 60
    AND  desplazar e ir al estado 61


estado 45

   16 expresion: expresion OP_SUM . termino

    ID     desplazar e ir al estado 20
    CTE    desplazar e ir al estado 21
    CTE_S  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23
    CTE_R  desplazar e ir al estado 24

    termino  ir al estado 62
    factor   ir al estado 33


estado 46

   17 expresion: expresion OP_RES . termino

    ID     desplazar e ir al estado 20
    CTE    desplazar e ir al estado 21
    CTE_S  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23
    CTE_R  desplazar e ir al estado 24

    termino  ir al estado 63
    factor   ir al estado 33


estado 47

   26 comparacion: expresion COMPARADOR . expresion

    ID     desplazar e ir al estado 20
    CTE    desplazar e ir al estado 21
    CTE_S  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23
    CTE_R  desplazar e ir al estado 24

    expresion  ir al estado 64
    termino    ir al estado 32
    factor     ir al estado 33


estado 48

   19 iteracion: WHILE condicion START . programa END

    ID       desplazar e ir al estado 1
    COMEN    desplazar e ir al estado 2
    DISPLAY  desplazar e ir al estado 3
    ENTER    desplazar e ir al estado 4
    GET      desplazar e ir al estado 5
    WHILE    desplazar e ir al estado 6
    IF       desplazar e ir al estado 7
    DIM      desplazar e ir al estado 8
    LONG     desplazar e ir al estado 9

    programa        ir al estado 65
    sentencia       ir al estado 11
    asignacion      ir al estado 12
    salida          ir al estado 13
    entrada         ir al estado 14
    iteracion       ir al estado 15
    seleccion       ir al estado 16
    declaracion     ir al estado 17
    ciclo_especial  ir al estado 18


estado 49

   28 termino: termino OP_MUL . factor

    ID     desplazar e ir al estado 20
    CTE    desplazar e ir al estado 21
    CTE_S  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23
    CTE_R  desplazar e ir al estado 24

    factor  ir al estado 66


estado 50

   29 termino: termino OP_DIV . factor

    ID     desplazar e ir al estado 20
    CTE    desplazar e ir al estado 21
    CTE_S  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23
    CTE_R  desplazar e ir al estado 24

    factor  ir al estado 67


estado 51

   20 seleccion: IF condicion THEN . programa ELSE programa ENDIF
   21          | IF condicion THEN . programa ENDIF

    ID       desplazar e ir al estado 1
    COMEN    desplazar e ir al estado 2
    DISPLAY  desplazar e ir al estado 3
    ENTER    desplazar e ir al estado 4
    GET      desplazar e ir al estado 5
    WHILE    desplazar e ir al estado 6
    IF       desplazar e ir al estado 7
    DIM      desplazar e ir al estado 8
    LONG     desplazar e ir al estado 9

    programa        ir al estado 68
    sentencia       ir al estado 11
    asignacion      ir al estado 12
    salida          ir al estado 13
    entrada         ir al estado 14
    iteracion       ir al estado 15
    seleccion       ir al estado 16
    declaracion     ir al estado 17
    ciclo_especial  ir al estado 18


estado 52

   38 listav: ID .

    $default  reduce usando la regla 38 (listav)


estado 53

   36 declaracion: DIM CORA listav . CORC AS CORA listat CORC
   37 listav: listav . COMA ID

    CORC  desplazar e ir al estado 69
    COMA  desplazar e ir al estado 70


estado 54

   42 lista: factor .

    $default  reduce usando la regla 42 (lista)


estado 55

   10 sentencia: LONG PARA lista . PARC
   41 lista: lista . COMA factor

    PARC  desplazar e ir al estado 71
    COMA  desplazar e ir al estado 72


estado 56

   35 factor: PARA expresion PARC .

    $default  reduce usando la regla 35 (factor)


estado 57

   43 ciclo_especial: WHILE ID IN CORA . lista_expre CORC DO programa ENDWHILE

    ID     desplazar e ir al estado 20
    CTE    desplazar e ir al estado 21
    CTE_S  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23
    CTE_R  desplazar e ir al estado 24

    expresion    ir al estado 73
    termino      ir al estado 32
    factor       ir al estado 33
    lista_expre  ir al estado 74


estado 58

   24 condicion: PARA NOT condicion . PARC

    PARC  desplazar e ir al estado 75


estado 59

   26 comparacion: expresion COMPARADOR . expresion
   27            | PARA expresion COMPARADOR . expresion PARC

    ID     desplazar e ir al estado 20
    CTE    desplazar e ir al estado 21
    CTE_S  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23
    CTE_R  desplazar e ir al estado 24

    expresion  ir al estado 76
    termino    ir al estado 32
    factor     ir al estado 33


estado 60

   23 condicion: PARA condicion OR . comparacion PARC

    ID     desplazar e ir al estado 20
    CTE    desplazar e ir al estado 21
    CTE_S  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 77
    CTE_R  desplazar e ir al estado 24

    expresion    ir al estado 29
    comparacion  ir al estado 78
    termino      ir al estado 32
    factor       ir al estado 33


estado 61

   22 condicion: PARA condicion AND . comparacion PARC

    ID     desplazar e ir al estado 20
    CTE    desplazar e ir al estado 21
    CTE_S  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 77
    CTE_R  desplazar e ir al estado 24

    expresion    ir al estado 29
    comparacion  ir al estado 79
    termino      ir al estado 32
    factor       ir al estado 33


estado 62

   16 expresion: expresion OP_SUM termino .
   28 termino: termino . OP_MUL factor
   29        | termino . OP_DIV factor

    OP_MUL  desplazar e ir al estado 49
    OP_DIV  desplazar e ir al estado 50

    $default  reduce usando la regla 16 (expresion)


estado 63

   17 expresion: expresion OP_RES termino .
   28 termino: termino . OP_MUL factor
   29        | termino . OP_DIV factor

    OP_MUL  desplazar e ir al estado 49
    OP_DIV  desplazar e ir al estado 50

    $default  reduce usando la regla 17 (expresion)


estado 64

   16 expresion: expresion . OP_SUM termino
   17          | expresion . OP_RES termino
   26 comparacion: expresion COMPARADOR expresion .

    OP_SUM  desplazar e ir al estado 45
    OP_RES  desplazar e ir al estado 46

    $default  reduce usando la regla 26 (comparacion)


estado 65

    1 programa: programa . sentencia
   19 iteracion: WHILE condicion START programa . END

    ID       desplazar e ir al estado 1
    COMEN    desplazar e ir al estado 2
    DISPLAY  desplazar e ir al estado 3
    ENTER    desplazar e ir al estado 4
    GET      desplazar e ir al estado 5
    WHILE    desplazar e ir al estado 6
    END      desplazar e ir al estado 80
    IF       desplazar e ir al estado 7
    DIM      desplazar e ir al estado 8
    LONG     desplazar e ir al estado 9

    sentencia       ir al estado 38
    asignacion      ir al estado 12
    salida          ir al estado 13
    entrada         ir al estado 14
    iteracion       ir al estado 15
    seleccion       ir al estado 16
    declaracion     ir al estado 17
    ciclo_especial  ir al estado 18


estado 66

   28 termino: termino OP_MUL factor .

    $default  reduce usando la regla 28 (termino)


estado 67

   29 termino: termino OP_DIV factor .

    $default  reduce usando la regla 29 (termino)


estado 68

    1 programa: programa . sentencia
   20 seleccion: IF condicion THEN programa . ELSE programa ENDIF
   21          | IF condicion THEN programa . ENDIF

    ID       desplazar e ir al estado 1
    COMEN    desplazar e ir al estado 2
    DISPLAY  desplazar e ir al estado 3
    ENTER    desplazar e ir al estado 4
    GET      desplazar e ir al estado 5
    WHILE    desplazar e ir al estado 6
    IF       desplazar e ir al estado 7
    ELSE     desplazar e ir al estado 81
    ENDIF    desplazar e ir al estado 82
    DIM      desplazar e ir al estado 8
    LONG     desplazar e ir al estado 9

    sentencia       ir al estado 38
    asignacion      ir al estado 12
    salida          ir al estado 13
    entrada         ir al estado 14
    iteracion       ir al estado 15
    seleccion       ir al estado 16
    declaracion     ir al estado 17
    ciclo_especial  ir al estado 18


estado 69

   36 declaracion: DIM CORA listav CORC . AS CORA listat CORC

    AS  desplazar e ir al estado 83


estado 70

   37 listav: listav COMA . ID

    ID  desplazar e ir al estado 84


estado 71

   10 sentencia: LONG PARA lista PARC .

    $default  reduce usando la regla 10 (sentencia)


estado 72

   41 lista: lista COMA . factor

    ID     desplazar e ir al estado 20
    CTE    desplazar e ir al estado 21
    CTE_S  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23
    CTE_R  desplazar e ir al estado 24

    factor  ir al estado 85


estado 73

   16 expresion: expresion . OP_SUM termino
   17          | expresion . OP_RES termino
   45 lista_expre: expresion .

    OP_SUM  desplazar e ir al estado 45
    OP_RES  desplazar e ir al estado 46

    $default  reduce usando la regla 45 (lista_expre)


estado 74

   43 ciclo_especial: WHILE ID IN CORA lista_expre . CORC DO programa ENDWHILE
   44 lista_expre: lista_expre . COMA expresion

    CORC  desplazar e ir al estado 86
    COMA  desplazar e ir al estado 87


estado 75

   24 condicion: PARA NOT condicion PARC .

    $default  reduce usando la regla 24 (condicion)


estado 76

   16 expresion: expresion . OP_SUM termino
   17          | expresion . OP_RES termino
   26 comparacion: expresion COMPARADOR expresion .
   27            | PARA expresion COMPARADOR expresion . PARC

    OP_SUM  desplazar e ir al estado 45
    OP_RES  desplazar e ir al estado 46
    PARC    desplazar e ir al estado 88

    $default  reduce usando la regla 26 (comparacion)


estado 77

   27 comparacion: PARA . expresion COMPARADOR expresion PARC
   35 factor: PARA . expresion PARC

    ID     desplazar e ir al estado 20
    CTE    desplazar e ir al estado 21
    CTE_S  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23
    CTE_R  desplazar e ir al estado 24

    expresion  ir al estado 89
    termino    ir al estado 32
    factor     ir al estado 33


estado 78

   23 condicion: PARA condicion OR comparacion . PARC

    PARC  desplazar e ir al estado 90


estado 79

   22 condicion: PARA condicion AND comparacion . PARC

    PARC  desplazar e ir al estado 91


estado 80

   19 iteracion: WHILE condicion START programa END .

    $default  reduce usando la regla 19 (iteracion)


estado 81

   20 seleccion: IF condicion THEN programa ELSE . programa ENDIF

    ID       desplazar e ir al estado 1
    COMEN    desplazar e ir al estado 2
    DISPLAY  desplazar e ir al estado 3
    ENTER    desplazar e ir al estado 4
    GET      desplazar e ir al estado 5
    WHILE    desplazar e ir al estado 6
    IF       desplazar e ir al estado 7
    DIM      desplazar e ir al estado 8
    LONG     desplazar e ir al estado 9

    programa        ir al estado 92
    sentencia       ir al estado 11
    asignacion      ir al estado 12
    salida          ir al estado 13
    entrada         ir al estado 14
    iteracion       ir al estado 15
    seleccion       ir al estado 16
    declaracion     ir al estado 17
    ciclo_especial  ir al estado 18


estado 82

   21 seleccion: IF condicion THEN programa ENDIF .

    $default  reduce usando la regla 21 (seleccion)


estado 83

   36 declaracion: DIM CORA listav CORC AS . CORA listat CORC

    CORA  desplazar e ir al estado 93


estado 84

   37 listav: listav COMA ID .

    $default  reduce usando la regla 37 (listav)


estado 85

   41 lista: lista COMA factor .

    $default  reduce usando la regla 41 (lista)


estado 86

   43 ciclo_especial: WHILE ID IN CORA lista_expre CORC . DO programa ENDWHILE

    DO  desplazar e ir al estado 94


estado 87

   44 lista_expre: lista_expre COMA . expresion

    ID     desplazar e ir al estado 20
    CTE    desplazar e ir al estado 21
    CTE_S  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23
    CTE_R  desplazar e ir al estado 24

    expresion  ir al estado 95
    termino    ir al estado 32
    factor     ir al estado 33


estado 88

   27 comparacion: PARA expresion COMPARADOR expresion PARC .

    $default  reduce usando la regla 27 (comparacion)


estado 89

   16 expresion: expresion . OP_SUM termino
   17          | expresion . OP_RES termino
   27 comparacion: PARA expresion . COMPARADOR expresion PARC
   35 factor: PARA expresion . PARC

    OP_SUM      desplazar e ir al estado 45
    OP_RES      desplazar e ir al estado 46
    PARC        desplazar e ir al estado 56
    COMPARADOR  desplazar e ir al estado 96


estado 90

   23 condicion: PARA condicion OR comparacion PARC .

    $default  reduce usando la regla 23 (condicion)


estado 91

   22 condicion: PARA condicion AND comparacion PARC .

    $default  reduce usando la regla 22 (condicion)


estado 92

    1 programa: programa . sentencia
   20 seleccion: IF condicion THEN programa ELSE programa . ENDIF

    ID       desplazar e ir al estado 1
    COMEN    desplazar e ir al estado 2
    DISPLAY  desplazar e ir al estado 3
    ENTER    desplazar e ir al estado 4
    GET      desplazar e ir al estado 5
    WHILE    desplazar e ir al estado 6
    IF       desplazar e ir al estado 7
    ENDIF    desplazar e ir al estado 97
    DIM      desplazar e ir al estado 8
    LONG     desplazar e ir al estado 9

    sentencia       ir al estado 38
    asignacion      ir al estado 12
    salida          ir al estado 13
    entrada         ir al estado 14
    iteracion       ir al estado 15
    seleccion       ir al estado 16
    declaracion     ir al estado 17
    ciclo_especial  ir al estado 18


estado 93

   36 declaracion: DIM CORA listav CORC AS CORA . listat CORC

    TIPO  desplazar e ir al estado 98

    listat  ir al estado 99


estado 94

   43 ciclo_especial: WHILE ID IN CORA lista_expre CORC DO . programa ENDWHILE

    ID       desplazar e ir al estado 1
    COMEN    desplazar e ir al estado 2
    DISPLAY  desplazar e ir al estado 3
    ENTER    desplazar e ir al estado 4
    GET      desplazar e ir al estado 5
    WHILE    desplazar e ir al estado 6
    IF       desplazar e ir al estado 7
    DIM      desplazar e ir al estado 8
    LONG     desplazar e ir al estado 9

    programa        ir al estado 100
    sentencia       ir al estado 11
    asignacion      ir al estado 12
    salida          ir al estado 13
    entrada         ir al estado 14
    iteracion       ir al estado 15
    seleccion       ir al estado 16
    declaracion     ir al estado 17
    ciclo_especial  ir al estado 18


estado 95

   16 expresion: expresion . OP_SUM termino
   17          | expresion . OP_RES termino
   44 lista_expre: lista_expre COMA expresion .

    OP_SUM  desplazar e ir al estado 45
    OP_RES  desplazar e ir al estado 46

    $default  reduce usando la regla 44 (lista_expre)


estado 96

   27 comparacion: PARA expresion COMPARADOR . expresion PARC

    ID     desplazar e ir al estado 20
    CTE    desplazar e ir al estado 21
    CTE_S  desplazar e ir al estado 22
    PARA   desplazar e ir al estado 23
    CTE_R  desplazar e ir al estado 24

    expresion  ir al estado 101
    termino    ir al estado 32
    factor     ir al estado 33


estado 97

   20 seleccion: IF condicion THEN programa ELSE programa ENDIF .

    $default  reduce usando la regla 20 (seleccion)


estado 98

   40 listat: TIPO .

    $default  reduce usando la regla 40 (listat)


estado 99

   36 declaracion: DIM CORA listav CORC AS CORA listat . CORC
   39 listat: listat . COMA TIPO

    CORC  desplazar e ir al estado 102
    COMA  desplazar e ir al estado 103


estado 100

    1 programa: programa . sentencia
   43 ciclo_especial: WHILE ID IN CORA lista_expre CORC DO programa . ENDWHILE

    ID        desplazar e ir al estado 1
    COMEN     desplazar e ir al estado 2
    DISPLAY   desplazar e ir al estado 3
    ENTER     desplazar e ir al estado 4
    GET       desplazar e ir al estado 5
    WHILE     desplazar e ir al estado 6
    IF        desplazar e ir al estado 7
    DIM       desplazar e ir al estado 8
    LONG      desplazar e ir al estado 9
    ENDWHILE  desplazar e ir al estado 104

    sentencia       ir al estado 38
    asignacion      ir al estado 12
    salida          ir al estado 13
    entrada         ir al estado 14
    iteracion       ir al estado 15
    seleccion       ir al estado 16
    declaracion     ir al estado 17
    ciclo_especial  ir al estado 18


estado 101

   16 expresion: expresion . OP_SUM termino
   17          | expresion . OP_RES termino
   27 comparacion: PARA expresion COMPARADOR expresion . PARC

    OP_SUM  desplazar e ir al estado 45
    OP_RES  desplazar e ir al estado 46
    PARC    desplazar e ir al estado 88


estado 102

   36 declaracion: DIM CORA listav CORC AS CORA listat CORC .

    $default  reduce usando la regla 36 (declaracion)


estado 103

   39 listat: listat COMA . TIPO

    TIPO  desplazar e ir al estado 105


estado 104

   43 ciclo_especial: WHILE ID IN CORA lista_expre CORC DO programa ENDWHILE .

    $default  reduce usando la regla 43 (ciclo_especial)


estado 105

   39 listat: listat COMA TIPO .

    $default  reduce usando la regla 39 (listat)
